force-app/main/default/objects/Yearly_goals_by_Role__c/Yearly_goals_by_Role__c.object-meta.xml
<CustomObject>
    <description>This object stores the goals of every role by year</description>
    <label>Yearly goals by Role</label>
    <nameField>
        <label>Yearly goals by Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Yearly goals by Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>