force-app/main/default/objects/Yearly_goals_by_Role__c/fields/Number_of_monthly_meetings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_monthly_meetings__c</fullName>
    <description>Goal for number of monthly meetings</description>
    <label>Number of monthly meetings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>