force-app/main/default/objects/Yearly_goals_by_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Stores the role for which the goals have been determined</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Roles</valueSetName>
    </valueSet>
</CustomField>