force-app/main/default/objects/Yearly_goals_by_Role__c/fields/X12_month_avg_selling_price__c.field-meta.xml
<CustomField>
    <fullName>X12_month_avg_selling_price__c</fullName>
    <description>stores 12 month average selling price goal</description>
    <label>12 month avg selling price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>