force-app/main/default/objects/Yearly_goals_by_Role__c/fields/X12_month_rolling_amt_close_rate__c.field-meta.xml
<CustomField>
    <fullName>X12_month_rolling_amt_close_rate__c</fullName>
    <label>12 month rolling amt close rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>