force-app/main/default/objects/Yearly_goals_by_Role__c/fields/X12_month_rolling_avg_deal_size__c.field-meta.xml
<CustomField>
    <fullName>X12_month_rolling_avg_deal_size__c</fullName>
    <description>12 month rolling goal for deal size</description>
    <label>12 month rolling avg deal size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>