force-app/main/default/objects/Yearly_goals_by_Role__c/fields/X12_month_rolling_avg_sales_cycle__c.field-meta.xml
<CustomField>
    <fullName>X12_month_rolling_avg_sales_cycle__c</fullName>
    <description>12 month rolling average sales cycle goal</description>
    <label>12 month rolling avg sales cycle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>