force-app/main/default/objects/Yearly_goals_by_Role__c/fields/X12_month_rolling_lead_to_opp_conv_rate__c.field-meta.xml
<CustomField>
    <fullName>X12_month_rolling_lead_to_opp_conv_rate__c</fullName>
    <description>Lead to opportunity conversion rate goal</description>
    <label>12 month rolling lead to opp conv rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>