force-app/main/default/objects/Yearly_goals_by_Role__c/fields/X12_month_rolling_opp_close_rate__c.field-meta.xml
<CustomField>
    <fullName>X12_month_rolling_opp_close_rate__c</fullName>
    <description>Goal for 12 month rolling opportunity close rate</description>
    <label>12 month rolling opp close rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>