force-app/main/default/objects/Yearly_goals_by_Role__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Stores the year for which the goals have been determined</description>
    <label>Year</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>